--- a/src/style.css
+++ b/src/style.css
@@ -15,14 +15,6 @@ body {
   /* border: 2px solid crimson; */
 }
 
-/* .arrow-up{
-  bottom: 10%;
-  left: 90%;
-  display: flex;
-  justify-content: end;
-  border: 1px solid red;
-} */
-
 header {
   /* background-color: #333; */
   margin: 0%;
@@ -185,12 +177,7 @@ a {
   bottom: calc(var(--height) + var(--gap-between-tooltip-to-button));
 }
 
-/* .tag{
-  border: 10px solid red;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-} */
+
 
 /* Hamburger Bar */
 .hamburger {
@@ -275,10 +262,15 @@ a {
   justify-content: center;
   flex-wrap: wrap;
 }
+@media (max-width: 800px) {
+  .hero {
+    /* border: 1px solid tomato; */
+    flex-wrap: wrap-reverse;
+  }
+}
 .intro-grid-1 {
   margin-top: 10px;
   padding: 0%;
-  /* border: 1px solid tomato; */
 }
 
 .tech-skill {
@@ -424,6 +416,7 @@ h1 {
   border-radius: 50%;
   overflow: hidden;
   /* border: 1px solid salmon; */
+  margin-bottom: 20px;
 }
 
 .parent-pic::before {
@@ -660,32 +653,45 @@ h2 {
 }
 /* email */
 #mail {
-  /* background-color: rgb(24, 24, 24); */
   padding: 40px 0px;
 }
 .contact-form {
-  padding: 70px 350px;
-  /* width: calc(60% - 100px); */
-  height: 100%;
+  /* border: 1px solid red; */
+  /* padding: 70px 350px; */
+  max-width: 40rem;
+  min-height: 400px;
   margin: 0 auto;
-  /* box-shadow: 10px 5px 15px rgb(112, 111, 111); */
   background-color: white;
-  /* border: 1px solid black; */
-  /* border-radius: 3%; */
 }
 
 .contact-form h2 {
   color: black;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 700;
+  /* border: 1px solid red; */
+  padding-top: 1rem;
 }
 
 .contact-form .formBox {
+  /* border: 1px solid red; */
   position: relative;
   display: flex;
+  /* flex-direction: column; */
   justify-content: space-between;
   flex-wrap: wrap;
   padding-top: 30px;
+  /* align-items: center; */
+}
+@media (max-width: 800px) {
+  .contact-form {
+    background-color: white;
+    /* border: 1px solid red; */
+  }
+
+  .contact-form .formBox {
+    flex-direction: column;
+    padding: 70px 50px;
+  }
 }
 
 .contact-form .formBox .inputbox {
@@ -693,8 +699,12 @@ h2 {
   margin-bottom: 35px;
 }
 .contact-form .formBox .inputbox.w50 {
-  width: 47%;
-  color: pink;
+  width: 40%;
+}
+@media (max-width: 800px) {
+  .contact-form .formBox .inputbox.w50 {
+    width: 100%;
+  }
 }
 .contact-form .formBox .inputbox.w100 {
   width: 100%;
@@ -745,13 +755,19 @@ h2 {
   background: none;
   color: #0f1923;
   cursor: pointer;
-  position: relative;
+  /* position: relative; */
   padding: 8px;
   margin-bottom: 20px;
   text-transform: uppercase;
   font-weight: 400;
   font-size: 14px;
   transition: all 0.15s ease;
+}
+@media (max-width: 800px) {
+  .btn {
+    max-width: 100px;
+    /* text-align: center; */
+  }
 }
 
 .button1::before,
